Fix slider wrap

--- a/html/slider_styles.css
+++ b/html/slider_styles.css
@@ -33,3 +33,11 @@
 .card-body{
     text-align: left;
 }
+
+
+table {
+    display: block;
+    overflow-x: auto;
+    /* white-space: nowrap; */
+    border: none;
+}
